apps/django-argo-test-01/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: django-argo-test-01
  labels:
    name: django-argo-test-01
    managed-by: dev-portal
