apps/django-argo-test-01/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-argo-test-01-service
  namespace: django-argo-test-01
  labels:
    app: django-argo-test-01
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: django-argo-test-01
